fresh from the oven

--- a/pert3/tipedata.ipynb
+++ b/pert3/tipedata.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- contoh tipe data integer (int)\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -148,6 +141,42 @@
     "\n",
     "print(a)\n",
     "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 - Hari.senin\n",
+      "2 - Hari.selasa\n",
+      "3 - Hari.rabu\n",
+      "4 - Hari.kamis\n",
+      "5 - Hari.jumat\n",
+      "6 - Hari.sabtu\n",
+      "7 - Hari.minggu\n"
+     ]
+    }
+   ],
+   "source": [
+    "from enum import Enum\n",
+    "\n",
+    "class Hari(Enum):\n",
+    "    senin = 1\n",
+    "    selasa = 2\n",
+    "    rabu = 3\n",
+    "    kamis = 4\n",
+    "    jumat = 5\n",
+    "    sabtu = 6\n",
+    "    minggu = 7\n",
+    "    \n",
+    "for Hari in ((((((((((((((((((((((((((((Hari)))))))))))))))))))))))))))):\n",
+    "    print(Hari.value, \"-\", Hari)\n",
+    "    "
    ]
   }
  ],
