fresh from the oven

--- a/pert6/array.ipynb
+++ b/pert6/array.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Array merupakan struktu yang dapat menyimpan dan mengatur data"
+    "### Array merupakan struktur yang dapat menyimpan dan mengatur data"
    ]
   },
   {
