--- a/pert6/array.ipynb
+++ b/pert6/array.ipynb
@@ -18,21 +18,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3]\n"
+      "[1, 2, 3]\n",
+      "1\n",
+      "2\n",
+      "3\n"
      ]
     }
    ],
    "source": [
     "# list int\n",
     "my_list = [1,2,3]\n",
-    "print(my_list)"
+    "print(my_list)\n",
+    "print(my_list[0])\n",
+    "print(my_list[1])\n",
+    "print(my_list[2])"
    ]
   },
   {
@@ -56,40 +62,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 'Hello', 3, 4]\n"
+      "[1, 'Hello', 3, 4]\n",
+      "1\n",
+      "Hello\n",
+      "3\n",
+      "4\n"
      ]
     }
    ],
    "source": [
     "# list mixd type data\n",
     "my_list = [1, \"Hello\", 3, 4]\n",
-    "print(my_list)"
+    "print(my_list)\n",
+    "print(my_list[0])\n",
+    "print(my_list[1])\n",
+    "print(my_list[2])\n",
+    "print(my_list[3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['mouse', [1, 2, 3], ['a']]\n"
+      "['mouse', [1, 2, 3, ['ijas', 'bayu', [4, 5, 6]]], ['a']]\n",
+      "mouse\n",
+      "5\n",
+      "a\n"
      ]
     }
    ],
    "source": [
     "# nested list\n",
-    "my_list = [\"mouse\", [1,2,3], ['a']]\n",
-    "print(my_list)"
+    "my_list = [\"mouse\", [1,2,3, [\"ijas\", \"bayu\", [4,5,6]]], ['a']]\n",
+    "print(my_list)\n",
+    "print(my_list[0])\n",
+    "print(my_list[1][3][2][1])\n",
+    "print(my_list[2][0])"
    ]
   }
  ],
